[package]
name = "batch_proxy_task"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
reqwest = { version = "0.12.22", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
tokio = { version = "1.47.1", features = ["full", "rt-multi-thread"] }
